[package]
name = "baby_rocs"
version = "0.1.0"
edition = "2024"

[dependencies]
roc = { git = "https://codeberg.org/Misha-Baranov/roc-rs.git", branch = "dev/misha", features = ["ffi"] }
webrtc-audio-processing = "~2.0"
webrtc-audio-processing-config = { version = "~2.0", features = ["serde"] }
anyhow = "1"
ctrlc = "3"
portaudio = "0.8"
regex = "1"
hound = "3"
serde = {version = "1", features = ["derive"]}
structopt = "0.3"
json5 = "0.4"
