[package]
name = "baby_rocs"
version = "0.1.0"
edition = "2024"

[dependencies]
roc = { git = "https://codeberg.org/Misha-Baranov/roc-rs.git", branch = "dev/misha", features = ["ffi", "shared"]}
df = { path = "3rdparty/DeepFilterNer/libDF", package = "deep_filter", default-features = false, features = ["tract"] }
ndarray = { version = "^0.15", features = ["serde"] }
webrtc-audio-processing = { version = "~2.0"}
webrtc-audio-processing-config = { version = "~2.0", features = ["serde"]}
anyhow = "1"
ctrlc = { version = "3"}
portaudio = { version = "0.8"}
regex = { version = "1"}
hound = "3"
serde = { version = "1", features = ["derive"]}
clap = { version = "^4", features = ["derive"] }
json5 = { version = "0.4"}
crossbeam-queue = { version = "0.3"}
tract-core = { version = "^0.19.4"}
tract-onnx = { version = "^0.19.4"}
tract-pulse = { version = "^0.19.4"}
tract-hir = { version = "^0.19.4"}

[[bin]]
name = "baby_rocs"
path = "src/main.rs"
